Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52389

NotoSansKhmer-Regular font glyphs is not rendered properly with Qt rendering

    XMLWordPrintable

Details

    • fe97ecf408da60931fc49b502a223d59b5f93f99 (qtbase) 7190aa26f65ab97b4f54c156a107ed7748a11df5 (qtdeclarative)

    Description

      Mentioned in title font glyphs are not rendered properly with Qt rendering (please have a look at screen shot to see what I do mean). The same font is rendered properly with Native rendering.

      Steps to reproduce:

      1. Download and unpack the demo attached + fonts in it
      2. Change paths in main.qml file to point to the fonts in your environment
      3. Run the application.
      4. You should see the same result as shown on screenshot.

      Attachments

        1. fonts_and_demo.tar.gz
          73 kB
        2. MyDingbat.ttf
          8 kB
        3. qml_my_km.png
          qml_my_km.png
          35 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            dmnikola Dmitry Nikolaev
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes